# dragon-board

./: AnalyzeCalibData.C  AnalyzeDataTimeRes.C  AnalyzeDataTimeResSin.C  CMakeCache.txt  CMakeLists.txt  CalcPeriod.C  CalibrationDataNew100events.root  DisplayTimeResiduals.C  FindROOT.cmake  TestTH2I.C  TimeResiduals1000events.root  TimeResidualsGraph1events.root  TimeResidualsHisto1000events.root  TimeResidualsHisto1events.root  cCalibAll.C  cmake_install.cmake  drs4_1000ev_dc_ped.root  drs4_1000ev_ped_20090923.root  drs4_20100311_ped.root  drs4_20100311_t_ped.root  functions.h  io.h
.svn/: all-wcprops  entries
.svn/text-base/: .project.svn-base  AnalyzeData.C.svn-base  AnalyzePed.C.svn-base  CalibrateData.C.svn-base  CalibrateDataCh7.C.svn-base  Calibration graphs.C.svn-base  CalibrationData1000events.root.svn-base  CalibrationData100events.root.svn-base  CalibrationData10events.root.svn-base  CalibrationDataNew1000events.root.svn-base  CompilePad.C.svn-base  DisplayPads.C.svn-base  OpenFile.C.svn-base  Period.root.svn-base  TimeResiduals.root.svn-base  TimeResiduals10events.root.svn-base  TimeResiduals1events.root.svn-base  TimeResidualsGraph1000events.root.svn-base  TimeResidualsGraph10events.root.svn-base  TimeResidualsHisto10events.root.svn-base  csubdata.C.svn-base  datastructure.h.svn-base
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  Event_cmakeRulesBuildPhase.makeRelWithDebInfo  Event_postBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  dragon-board_cmakeRulesBuildPhase.makeRelWithDebInfo  dragon-board_postBuildPhase.makeDebug  install_postBuildPhase.makeRelease
dragon-board.xcodeproj/: matteodepalo.mode1v3  matteodepalo.pbxuser  project.pbxproj
